- Fixes for the sidebar of profiles + character pages. - Avatar no longer stretches distorting the image.
- Changed ignavatar to just avatar on character pages as it's name is literally 40 pixels below it. Guild name will be included shortly.

git-svn-id: https://subversion.assembla.com/svn/mapler-me@745 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.player.css
+++ b/trunk/website/inc/css/style.player.css
@@ -6,7 +6,6 @@
 	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 	border: 1px solid #ddd;
 	margin-bottom: 20px;
-	width: 96%;
 }
 
 .name {
